# legistats

./: Makefile  check.ps1  pyproject.toml
legistats/: collectstats.py  data.py  tools.py
legistats/cli/: __init__.py
tests/: test_collectstats.py  test_tools.py
